Did stuff: mainly python bindings from v0.0.3 to generate generic archetypes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
 Imports: 
     dplyr,
+    glue,
     magrittr,
+    reticulate,
     stringr,
     tidyselect
 Depends: 
