--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,13 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
 Imports: 
+    assertthat,
     dplyr,
     glue,
     magrittr,
     reticulate,
     stringr,
+    themer,
     tidyselect
 Depends: 
     R (>= 2.10)
