package development stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(add_units)
 export(generate_candidate_set)
 export(preference_constraints)
 export(python_import_module)
-export(replace_codes_from_archetypes)
 export(replace_effect_codes)
+export(sub_codes_from_archs)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
